--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ h5py==2.10.0
 idna==2.10
 importlib-metadata==1.7.0
 imutils==0.5.3
+joblib==0.17.0
 Keras==2.4.3
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
@@ -22,23 +23,28 @@ numpy==1.18.5
 oauthlib==3.1.0
 opencv-python==4.4.0.42
 opt-einsum==3.3.0
+pandas==1.1.2
 Pillow==7.2.0
 protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
 python-dateutil==2.8.1
+pytz==2020.1
 PyYAML==5.3.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
+scikit-learn==0.23.2
 scipy==1.4.1
 six==1.15.0
+sklearn==0.0
 tensorboard==2.3.0
 tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.0
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
+threadpoolctl==2.1.0
 urllib3==1.25.10
 Werkzeug==1.0.1
 wrapt==1.12.1
