--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 absl-py==0.10.0
+altgraph==0.17
+astor==0.8.1
 astunparse==1.6.3
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 cycler==0.10.0
+fbs==0.9.0
+future==0.18.2
 gast==0.3.3
 google-auth==1.21.1
 google-auth-oauthlib==0.4.1
@@ -15,20 +19,26 @@ importlib-metadata==1.7.0
 imutils==0.5.3
 joblib==0.17.0
 Keras==2.4.3
+Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
+macholib==1.14
 Markdown==3.2.2
-matplotlib==3.3.1
 numpy==1.18.5
 oauthlib==3.1.0
-opencv-python==4.4.0.42
+opencv-python-headless==4.4.0.46
 opt-einsum==3.3.0
 pandas==1.1.2
+pefile==2019.4.18
 Pillow==7.2.0
-protobuf==3.13.0
+protobuf==3.14.0
+protobuf3==0.2.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+PyInstaller==3.4
 pyparsing==2.4.7
+PyQt5==5.15.1
+PyQt5-sip==12.8.1
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
@@ -39,9 +49,9 @@ scikit-learn==0.23.2
 scipy==1.4.1
 six==1.15.0
 sklearn==0.0
-tensorboard==2.3.0
+tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.0
+tensorflow==2.3.1
 tensorflow-estimator==2.3.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
